Added about component to index page. Made some css adjustments to hero component. Adjusted background and text colors of Specials component.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,8 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+/* custom styles */
+.title {
+  @apply pb-10 text-xl font-bold tracking-widest text-center text-green-800 sm:text-2xl md:text-2xl lg:text-4xl xl:text-5xl;
 }
